--- a/cloud-web/pom.xml
+++ b/cloud-web/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>cloud-web</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>cloud-web Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -17,6 +17,7 @@
             <artifactId>cloud-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
     </dependencies>
     <build>
         <finalName>cloud-web</finalName>
